# tox-poetry-deployment

./: README.md
regression_model/: pyproject.toml  tox.ini
regression_model/tests/: test_predict.py
